@@ -1,3 +1,7 @@
+  23 Nov 2016; Manuel Friedli <manuel@fritteli.ch> -gitlab-shell-3.5.0.ebuild,
+  -gitlab-shell-3.6.1.ebuild:
+  dev-vcs/gitlab-shell:  pruned old ebuilds
+
 *gitlab-shell-4.0.0 (11 Nov 2016)
 
   11 Nov 2016; Manuel Friedli <manuel@fritteli.ch> +gitlab-shell-4.0.0.ebuild:
